[#22] WIP - Fixes to latest /api/dashboard/data.json API changes
